name:                rc4brute
version:             0.1.0.0
synopsis:            RC4 exhaustive search tool
description:         A simple CLI app to perform exhaustive search of ARC4 keys given a ciphertext, a partial known plaintext and key length.
homepage:            https://github.com/emedvedev/rc4brute
license:             Apache-2.0
license-file:        LICENSE
author:              Edward Medvedev
maintainer:          edward.medvedev@gmail.com
copyright:           2016 Edward Medvedev
category:            Cryptography
build-type:          Simple
extra-source-files:  README.md, CHANGELOG.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , cryptonite >=0.19
                     , base16-bytestring >=0.1.1.6, bytestring >=0.10.8.1
  default-language:    Haskell2010

executable rc4brute
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , rc4brute
                     , optparse-applicative >=0.12.0.0
                     , base16-bytestring >=0.1.1.6
                     , bytestring >=0.10.8.1
  default-language:    Haskell2010

test-suite rc4brute-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , rc4brute
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/emedvedev/rc4brute
